--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,3 @@
 # Astro Runtime includes the following pre-installed providers packages: https://www.astronomer.io/docs/astro/runtime-image-architecture#provider-packages
+apache-airflow-providers-http==5.3.2
+apache-airflow-providers-postgres
